# svap

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  platform.yml
.claude/: CLAUDE.md
.claude/skills/drift/: SKILL.md
.claude/skills/drift-audit/: SKILL.md
.claude/skills/drift-audit-semantic/: SKILL.md
.claude/skills/drift-audit-ux/: SKILL.md
.claude/skills/drift-guard/: SKILL.md
.drift-audit/: attack-plan.json  config.json  drift-manifest.json  drift-report.md  raw-discovery.txt
.drift-audit/semantic/: call-graph.json  clusters.json  code-units.json  css-intra-similarity.json  css-units.json  dependency-atlas.json  dependency-context.json  purpose-statements.json  semantic-drift-report.md  semantic-embeddings.json  similarity-matrix.json  structural-fingerprints.json  type-signatures.json
.github/workflows/: ci.yml  deploy.yml
.serena/: project.yml
backend/: Cargo.toml  config.yaml  pyproject.toml
backend/api/: Cargo.toml
backend/api/src/: main.rs
backend/scripts/: check-no-print.sh  reset_runs.py
backend/shared/: Cargo.toml
backend/shared/prompts/: discovery_richness.txt  stage1_extract.txt  stage2_refine.txt  stage3_score.txt  stage4_characterize.txt  stage4_score.txt  stage4b_plan_research.txt  stage4c_assess_quality.txt  stage5_predict.txt
backend/shared/src/: bedrock.rs  config.rs  db.rs  lib.rs  rag.rs  types.rs
backend/shared/src/stages/: mod.rs  stage0_source_fetch.rs  stage0a_discovery.rs  stage1_case_assembly.rs  stage2_taxonomy.rs  stage3_scoring.rs  stage4_scanning.rs  stage4a_triage.rs  stage4b_research.rs  stage4c_assessment.rs  stage5_prediction.rs  stage6_detection.rs
backend/src/svap/: __init__.py  api.py  api_schemas.py  bedrock_client.py  defaults.py  delta.py  dev_server.py  hhs_data.py  orchestrator.py  parallel.py  rag.py  stage_runner.py  storage.py
backend/src/svap/prompts/: discovery_extract_links.txt  stage2_dedup.txt  stage3_score.txt  stage4_score.txt  stage4a_triage.txt  stage4b_extract_findings.txt  stage5_predict.txt  stage6_detect.txt
backend/src/svap/regulatory/: __init__.py  ecfr_client.py  federal_register_client.py  source_router.py
backend/src/svap/seed/: cases.json  data_sources.json  detection_patterns.json  dimension_registry.json  enforcement_sources.json  policies.json  policy_catalog.json  policy_cfr_map.json  predictions.json  source_feeds.json  taxonomy.json
backend/src/svap/stages/: __init__.py  stage0_source_fetch.py  stage0a_discovery.py  stage1_case_assembly.py  stage2_taxonomy.py  stage3_scoring.py  stage4_scanning.py  stage4a_triage.py  stage4b_research.py  stage4c_assessment.py  stage5_prediction.py  stage6_detection.py
backend/stage-runner/: Cargo.toml
backend/stage-runner/src/: main.rs
db/migrations/: 001_baseline.sql
docs/: ARCHITECTURE.md  DATA_MODEL.md  PROMPT_ENGINEERING.md  REPLICATION_GUIDE.md
docs/adr/: 013-unified-store-access.md  014-shared-api-utility.md  015-async-error-handling.md  016-backend-shared-modules.md
docs/plans/: 2026-02-25-cognito-auth-design.md  2026-02-25-cognito-auth-plan.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/eslint-rules/: max-jsx-props.js  no-direct-fetch.js  no-direct-store-import.js  no-escape-hatches.js  no-inline-styles.js  no-manual-async-state.js  no-manual-expand-state.js
frontend/public/: config.js
frontend/src/: App.tsx  auth.ts  config.ts  hooks.ts  index.css  types.ts  utils.ts
frontend/src/components/: SharedUI.tsx  Sidebar.tsx
frontend/src/data/: api.ts  (+5 more)
infrastructure/terraform/: locals.tf  main.tf  outputs.tf  svap.tf
scripts/: build-lambda.sh  deploy.sh  dev.sh  ensure-state-bucket.sh  migrate-to-shared-rds.sh  seed-local.sh
svap-ui-project/svap-ui/: DASHBOARD_REQUIREMENTS.md  index.html  package-lock.json  package.json
svap_pipeline/svap/: README.md  config.yaml  requirements.txt
(+55 files in other folders)
