[workspace]
resolver = "2"
members = ["shared", "api", "stage-runner"]

[workspace.dependencies]
aws-config = "1"
aws-sdk-bedrockruntime = "1"
aws-sdk-s3 = "1"
aws-sdk-sfn = "1"
chrono = { version = "0.4", features = ["serde"] }
lambda_http = "0.13"
lambda_runtime = "0.13"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tiktoken-rs = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
