[package]
name = "svap-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
svap-shared = { path = "../shared" }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-sfn = { workspace = true }
chrono = { workspace = true }
lambda_http = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
