[package]
name = "svap-stage-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stage-runner"
path = "src/main.rs"

[dependencies]
svap-shared = { path = "../shared" }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
